--- a/SIFRPNew.html
+++ b/SIFRPNew.html
@@ -1043,7 +1043,7 @@
                                         value='0' /></div>
                                 <div class="sheet-item" style="width: 85%;"><button type='roll'
                                         class="sheet-specialtyRoll" name="roll_persuasionIntimidate"
-                                        value="&{template:sofai} {{input=**@{character_name} tests Persuasion (Intimidate)!** \n\n [[ ( [[ @{persuasion} + @{persuasionIntimidate} + ?{Bonus Dice|0} ]] )d6dl[[ @{persuasionIntimidate} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}" data-i18n="itimidate">Intimidate</button>
+                                        value="&{template:sofai} {{input=**@{character_name} tests Persuasion (Intimidate)!** \n\n [[ ( [[ @{persuasion} + @{persuasionIntimidate} + ?{Bonus Dice|0} ]] )d6dl[[ @{persuasionIntimidate} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}" data-i18n="intimidate">Intimidate</button>
                                 </div>
                             </div>
                             <div class="sheet-row">
@@ -2779,7 +2779,7 @@
                               <div class="sheet-col sheet-characteristics">
                                   <div class="sheet-2colrow">
                                       <div class="sheet-col">
-                                          <button type='roll' class='sheet-characteristics' name='attr_ArmyPenarm-roll' value=''  disabled="true"><label style="vertical-align: middle;" data-i18n="amor-penalty">Armor Penalty</label></button>
+                                          <button type='roll' class='sheet-characteristics' name='attr_ArmyPenarm-roll' value=''  disabled="true"><label style="vertical-align: middle;" data-i18n="armor-penalty">Armor Penalty</label></button>
                                       </div>
                                       <div class="sheet-col">
                                           <div class="unnatural_box">
